--- a/BandLoader/Assets/bandloader_ui.ui
+++ b/BandLoader/Assets/bandloader_ui.ui
@@ -18,7 +18,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="resources.qrc">
-    <normaloff>:/app_logo/app-logo.png</normaloff>:/app_logo/app-logo.png</iconset>
+    <normaloff>:/app_logo/icon.png</normaloff>:/app_logo/icon.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="artist_label">
@@ -208,7 +208,7 @@
      <x>0</x>
      <y>0</y>
      <width>531</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
